fix: wrap issue

--- a/styles/Page.module.scss
+++ b/styles/Page.module.scss
@@ -46,7 +46,6 @@
       grid-template-columns: 400px 5rem 400px;
     }
     h2 {
-      white-space: nowrap;
       color: var(--green);
       font-family: var(--font-names);
       font-size: calc(var(--font-size-h2) * 1.5);
